--- a/environment2.yml
+++ b/environment2.yml
@@ -4,3 +4,9 @@ channels:
 dependencies:
   - python
   - numpy
+  - pip
+  - pip:
+    - statsmodels
+    - jupyterlab
+    - ipympl
+    - matplotlib
